[gd_scene load_steps=16 format=2]

[ext_resource path="res://dataCode/LoginPage.gd" type="Script" id=1]
[ext_resource path="res://dataCode/IdBox.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://dataFile/fonts/VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=2]
size = 45
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://dataFile/fonts/ConsoleDisplay-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.478431, 0.784314, 1, 0.392157 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFontData" id=8]
font_path = "res://dataFile/fonts/VCR_OSD_MONO_1.001.ttf"

[sub_resource type="DynamicFont" id=9]
size = 40
use_mipmaps = true
use_filter = true
font_data = SubResource( 8 )

[sub_resource type="DynamicFontData" id=10]
font_path = "res://dataFile/fonts/SFProDisplay-SemiBold.ttf"

[sub_resource type="DynamicFont" id=11]
size = 30
use_mipmaps = true
use_filter = true
font_data = SubResource( 10 )

[sub_resource type="Animation" id=12]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -780, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="Animation" id=13]
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -780, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Login" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [ 960.401 ]
}

[node name="InfoText" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 665.0
margin_top = 350.0
margin_right = -657.0
margin_bottom = -677.0
custom_fonts/font = SubResource( 2 )
text = "Insira seu id de login:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IdBox" type="LineEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 713.0
margin_top = 480.0
margin_right = -707.0
margin_bottom = -530.0
custom_fonts/font = SubResource( 4 )
align = 1
max_length = 18
secret = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 815.0
margin_top = 600.0
margin_right = -805.0
margin_bottom = -420.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 9 )
text = "Entrar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 163.0
margin_top = 700.0
margin_right = 1763.0
margin_bottom = 780.0
custom_fonts/font = SubResource( 11 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/InLoginMenu = SubResource( 12 )
anims/OutLoginMenu = SubResource( 13 )

[node name="OutTimer" type="Timer" parent="."]
[connection signal="pressed" from="LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="timeout" from="OutTimer" to="." method="_on_OutTimer_timeout"]
